--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://taskboard-r5sb.onrender.com
+# VITE_API_URL=https://taskboard-r5sb.onrender.com
+VITE_API_URL=https://zany-blue-deer-kit.cyclic.app
